--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,3 @@
-# .github/workflows/deploy.yml
-
 name: CI/CD Pipeline
 
 on:
@@ -11,7 +9,6 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       BACKEND_APP_SERVICE_NAME: "app-backend-tf-prog2052"
       FRONTEND_APP_SERVICE_NAME: "app-frontend-tf-prog2052"
       RESOURCE_GROUP_NAME: "rg-tf-prog2052"
@@ -29,13 +26,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Install Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_wrapper: false
 
       - name: Azure Login
         uses: azure/login@v1
@@ -56,15 +48,30 @@ jobs:
 
       - name: Terraform Init (Backend)
         working-directory: ./root
+        env:
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         run: terraform init
 
       - name: Terraform Apply (Backend)
         working-directory: ./root
+        env:
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         run: terraform apply -auto-approve -var-file="backend_app_settings.tfvars"
 
       - name: Get Backend Hostname
         id: get_backend_hostname
         working-directory: ./root
+        env:
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         run: |
           echo "backend_hostname=$(terraform output -raw backend_app_service_default_hostname)" >> $GITHUB_ENV
 
@@ -74,15 +81,17 @@ jobs:
           context: ./backend
           push: true
           platforms: linux/amd64
-          tags: ${{ env.DOCKERHUB_USERNAME }}/dailyverse-backend:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/dailyverse-backend:latest
 
       - name: Build and Push Frontend Image
         uses: docker/build-push-action@v4
+        env:
+          backend_hostname: ${{ env.backend_hostname }}
         with:
           context: ./frontend
           push: true
           platforms: linux/amd64
-          tags: ${{ env.DOCKERHUB_USERNAME }}/dailyverse-frontend:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/dailyverse-frontend:latest
           build-args: |
             REACT_APP_BACKEND_URL=https://${{ env.backend_hostname }}
 
@@ -96,6 +105,11 @@ jobs:
 
       - name: Terraform Apply (Frontend)
         working-directory: ./root
+        env:
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         run: terraform apply -auto-approve -var-file="frontend_app_settings.tfvars"
 
       - name: Restart Backend App Service
