--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-        run: terraform apply -auto-approve -var-file="backend_app_settings.tfvars"
+        run: terraform apply -auto-approve -var-file="backend_app_settings.tfvars" -var 'frontend_app_service_settings={}'
 
       - name: Get Backend Hostname
         id: get_backend_hostname
@@ -110,7 +110,7 @@ jobs:
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-        run: terraform apply -auto-approve -var-file="frontend_app_settings.tfvars"
+        run: terraform apply -auto-approve -var-file="frontend_app_settings.tfvars" -var 'backend_app_service_settings={}'
 
       - name: Restart Backend App Service
         run: |
