--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,34 +1,24 @@
-# Stage 1: Build the React app
-FROM node:22-alpine AS builder
+# Build stage
+FROM node:14-alpine AS build
 
 WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY package.json package-lock.json ./
+COPY package*.json ./
 
-# Install dependencies
-RUN npm ci
+RUN npm install
 
-# Copy the rest of the code
 COPY . .
 
-# Build the React app
+ARG REACT_APP_BACKEND_URL
+ENV REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL
+
 RUN npm run build
 
-# Stage 2: Serve the app with Nginx
-FROM nginx:alpine
+# Production stage
+FROM nginx:stable-alpine
 
-# Remove default Nginx website
-RUN rm -rf /usr/share/nginx/html/*
+COPY --from=build /app/build /usr/share/nginx/html
 
-# Copy the built app from the builder stage
-COPY --from=builder /app/build /usr/share/nginx/html
-
-# Copy custom Nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-# Expose port 80
 EXPOSE 80
 
-# Start Nginx server
 CMD ["nginx", "-g", "daemon off;"]
