--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,7 +2,7 @@
 
 server {
   listen 80;
-  server_name localhost 10.212.168.214;
+  server_name localhost;
 
   root /usr/share/nginx/html;
   index index.html index.htm;
