--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,24 +1,34 @@
-# Build stage
-FROM node:14-alpine AS build
+# Stage 1: Build the React app
+FROM node:22-alpine AS builder
 
 WORKDIR /app
 
-COPY package*.json ./
+# Copy package.json and package-lock.json
+COPY package.json package-lock.json ./
 
-RUN npm install
+# Install dependencies
+RUN npm ci
 
+# Copy the rest of the code
 COPY . .
 
-ARG REACT_APP_BACKEND_URL
-ENV REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL
-
+# Build the React app
 RUN npm run build
 
-# Production stage
-FROM nginx:stable-alpine
+# Stage 2: Serve the app with Nginx
+FROM nginx:alpine
 
-COPY --from=build /app/build /usr/share/nginx/html
+# Remove default Nginx website
+RUN rm -rf /usr/share/nginx/html/*
 
+# Copy the built app from the builder stage
+COPY --from=builder /app/build /usr/share/nginx/html
+
+# Copy custom Nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Expose port 80
 EXPOSE 80
 
+# Start Nginx server
 CMD ["nginx", "-g", "daemon off;"]
